# xrxs2ldap

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.sync.example.yml  pyproject.toml
deploy/: crontab.example  run_sync.sh  run_sync_dry.sh
samples/: hr_data.json
src/xrxs2ldap/: __init__.py  cli.py  config.py  ldap_sync.py  models.py  nextcloud_cli.py  nextcloud_sync.py
src/xrxs2ldap/adapters/: base.py  json_file.py  xinrenxinshi.py
